--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Rocket Coffe</title>
+    <title>Rocket Coffee</title>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
   </head>
