--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Rocket Coffee</title>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
   </head>
